# LC76G

./: .gitignore  README.md  build_exe.ps1  installer.iss  lc76g_gnss.spec  main.py  pyproject.toml  requirements.txt
docs/: INSTALACAO_E_DISTRIBUICAO.md  Relatorio_Teste_GNSS_LC76G.docx  protocol.txt  spec.txt  ttff_lc76g_20260623_111822.csv
scripts/: make_icon.py  simulate_nmea.py
src/lc76g_gnss/: __init__.py  accuracy.py  app.py  core.py  report.py  ublox_proto.py  weather.py
src/lc76g_gnss/devices/: __init__.py  base.py  casic.py  generic.py  quectel.py  ublox.py
tests/: test_accuracy.py  test_core.py  test_devices.py  test_report.py  test_ublox_proto.py  test_weather.py
